--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -2,7 +2,10 @@
   max-width: 1600px;
   margin: 0 auto;
 }
-
+nav {
+  display: flex;
+  justify-content: space-around;
+}
 nav a {
   text-align: center;
   color: #ffa62b;
@@ -11,9 +14,11 @@ nav a {
 }
 #hero-msg h1 {
   text-align: center;
+  color: white;
 }
 #hero-msg h4 {
   text-align: center;
+  color: white;
 }
 .button-box {
   text-align: center;
@@ -32,6 +37,8 @@ main section {
 #background {
   height: 725px;
   background-color: #82c0cc;
+  grid-column: 1/11;
+  grid-row: 4/9;
 }
 .home-title {
   font-family: Courier New, monospace;
@@ -47,6 +54,8 @@ body {
 }
 header {
   background-color: #ffa62b;
+  display: grid;
+  grid-template-columns: 150px auto;
 }
 nav a:hover {
   background-color: #82c0cc;
@@ -71,6 +80,8 @@ nav a:hover {
   background-color: #82c0cc;
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
 }
 .msg h2 {
   color: #16697a;
@@ -79,12 +90,16 @@ nav a:hover {
   color: #16697a;
   font-size: 0.8em;
   padding-bottom: 15px;
+  box-shadow: 5px 5px 10px #6f7364;
 }
 footer {
   background-color: #82c0cc;
   color: #16697a;
   padding: 25px 50px;
   margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .home-title {
   color: #16697a;
@@ -120,6 +135,8 @@ h2 {
 }
 #logo-link {
   padding-top: 5px;
+  justify-self: center;
+  align-self: center;
 }
 footer .social img {
   padding-top: 15px;
@@ -132,7 +149,97 @@ footer .social img {
 
 .card-img {
   border: 10px solid #16697a;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+  opacity: 0.6;
+  transform: scale(1.1);
 }
 main section img {
   box-sizing: border-box;
+}
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+}
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  margin-top: -100px;
+  z-index: -1;
+}
+#hero-msg {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
+}
+.home-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+}
+.card-img,
+.mountains {
+  width: 100%;
+  grid-column: 2/7;
+  grid-row: 5/8;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+.rivers-card {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+.camping-card {
+  grid-column: 5/7;
+  grid-row: 2/3;
+}
+.rapids-card {
+  grid-column: 8/10;
+  grid-row: 2/3;
+}
+@media screen and (max-width: 900px) {
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
+  }
+  nav,
+  footer {
+    flex-direction: column;
+  }
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+  #hero {
+    margin-top: 0;
+  }
+  #hero-msg {
+    margin-top: 0;
+  }
+  #hero-msg h4 {
+    display: none;
+  }
+  .home-title {
+    font-size: 25px;
+    color: #6f7364;
+  }
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+  #background {
+    display: none;
+  }
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+    margin-top: 25px;
+  }
 }
