--- a/random_facts/site-plan.css
+++ b/random_facts/site-plan.css
@@ -11,18 +11,18 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Monaco";
+  --paragraph-font: "Monaco";
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396e94; /* headlines on a white background */
-  --headline-color-on-color: white; /* headlines on a colored background */
+  --headline-color-on-color: #e7c24f; /* headlines on a colored background */
   --paragraph-color-on-white: #396e94; /* paragraph text on a white background */
   --paragraph-color-on-color: white; /* paragraph text on a colored background */
   --paragraph-background-color: #396e94;
   --nav-link-color: #396e94;
   --nav-background-color: #d4ac0d;
-  --nav-hover-link-color: white;
+  --nav-hover-link-color: #a42212;
   --nav-hover-background-color: #396e94;
 }
 
@@ -176,3 +176,4 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+
